--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <input name="checkboxes" id="checkboxes-3" value="4" type="checkbox">
       4
     </label>
-
+   <input name="rangebar" value="4" type="range">
   </div>
 </div>
 <!-- Button (Double) -->
