--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 </head>
 <body>
+   <div class="col-sm-12 col-md-12">
    <form class="form-horizontal">
 <fieldset>
 
@@ -13,6 +14,7 @@
 <legend>Form Name</legend>
 
 <!-- Text input-->
+<div class="col-sm-6 col-md-6 col-sm-offset-3 col-md-offset-3">
 <div class="form-group">
   <label class="col-md-4 control-label" for="name">First Name</label>  
   <div class="col-md-5">
@@ -80,8 +82,8 @@
     <button id="close" name="close" class="btn btn-danger">close</button>
   </div>
 </div>
-
+</div>
 </fieldset>
 </form>
-    
+</div>    
 </body></html>
