--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <legend>Form Name</legend>
 
 <!-- Text input-->
-<div class="col-sm-8 col-md-8 col-sm-offset-2 col-md-offset-2">
+<div class="col-sm-12 col-md-12">
 <div class="form-group">
   <label class="col-md-4 control-label" for="name">First Name</label>  
   <div class="col-md-5">
@@ -78,8 +78,8 @@
 <div class="form-group">
   <label class="col-md-4 control-label" for="submit"></label>
   <div class="col-md-8">
-    <button id="submit" name="submit" class="btn btn-success">Submit</button>
-    <button id="close" name="close" class="btn btn-danger">close</button>
+    <button id="submit" name="submit" class="btn btn-success btn-block">Submit</button>
+    <button id="close" name="close" class="btn btn-danger btn-block">close</button>
   </div>
 </div>
 </div>
